--- a/index.html
+++ b/index.html
@@ -1,5 +1,26 @@
-<div style="width: 100vw; height: 100vh; overflow: hidden; position: relative;">
-  <iframe src="https://scarf-oil-80409867.figma.site" 
-          style="width: 100%; height: 100%; border: none; position: absolute; top: 0; left: 0;">
-  </iframe>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Cognivo</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+  </style>
+</head>
+<body>
+  <!-- Main content of your page goes here -->
+
+  <h2>Iframe Crop Example (Top 100px Hidden)</h2>
+  <div style="width:600px; height:400px; overflow:hidden; position:relative;">
+    <iframe src="https://example.com"
+      style="width:600px; height:500px; position:absolute; top:-100px; left:0; border:none;"></iframe>
+  </div>
+
+  <!-- Add more page content below as needed -->
+
+</body>
+</html>
